# spltui

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  ui.rs
src/themes/: gruvbox.rs  gruvbox_dark.rs  gruvbox_light.rs
