[package]
name = "spltui"
version = "0.1.7"
edition = "2024"
authors = ["LordPaijo (Iyan) <iyanmaumakan.56@gmail.com>"]
description = "Sebuah Kalkulator Sistem Persamaan Linear (degan) Variabel Berbasis Terminal User Interface."
license = "MIT"
repository = "https://github.com/lordpaijo/spltui"
documentation = "https://docs.rs/spltui"

[dependencies]
clap = "4.5.38"
crossterm = "0.28.1"
matematika-rs = "0.3.2"
ratatui = "0.29.0"
