[package]
name = "spltui"
version = "0.2.1"
edition = "2024"
authors = ["LordPaijo (Iyan) <iyanmaumakan.56@gmail.com>"]
description = "Sebuah Kalkulator Sistem Persamaan Linear (degan) Variabel Berbasis Terminal User Interface."
license = "MIT"
repository = "https://github.com/lordpaijo/spltui"
documentation = "https://docs.rs/spltui"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28.1"
matematika-rs = "0.3.2"
ratatui = "0.29.0"
log = "0.4"
env_logger = "0.10"
